--- a/androidApp/app/src/main/AndroidManifest.xml
+++ b/androidApp/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.seestore">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
@@ -13,10 +14,10 @@
         android:theme="@style/SeeStore"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.seestore.activity.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".SplashActivity"
+            android:name=".activity.SplashActivity"
             android:exported="true"
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.SeeStore.NoActionBar">
