--- a/androidApp/app/src/main/AndroidManifest.xml
+++ b/androidApp/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:theme="@style/SeeStore"
         tools:targetApi="31">
         <activity
+            android:name=".activity.CartActivity"
+            android:exported="false"
+            android:label="@string/title_activity_cart"
+            android:theme="@style/SeeStore.NoActionBar" />
+        <activity
             android:name="com.example.seeStore.activity.MainActivity"
             android:exported="false" />
         <activity
