--- a/androidApp/app/build.gradle
+++ b/androidApp/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'androidx.exifinterface:exifinterface:1.3.2'
 
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
