--- a/androidApp/app/src/main/AndroidManifest.xml
+++ b/androidApp/app/src/main/AndroidManifest.xml
@@ -22,12 +22,16 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".activity.CartActivity"
-            android:exported="false"
-            android:label="@string/title_activity_cart"
-            android:theme="@style/SeeStore.NoActionBar" />
+            android:name=".activity.MainActivity"
+            android:exported="false" />
         <activity
-            android:name="com.example.seeStore.activity.MainActivity"
+            android:name=".activity.CartActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.ProductListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SearchActivity"
             android:exported="false" />
         <activity
             android:name="com.example.seeStore.activity.SplashActivity"
