--- a/androidApp/app/src/main/AndroidManifest.xml
+++ b/androidApp/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
         android:theme="@style/SeeStore"
         tools:targetApi="31">
         <activity
+            android:name=".activity.OrderActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.ProductListActivity"
             android:exported="false" />
         <activity
