--- a/androidApp/app/src/main/AndroidManifest.xml
+++ b/androidApp/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_logo"
         android:supportsRtl="true"
         android:theme="@style/SeeStore"
         tools:targetApi="31">
