--- a/androidApp/app/src/main/AndroidManifest.xml
+++ b/androidApp/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
         tools:targetApi="31">
         <activity
             android:name=".activity.OrderActivity"
+            android:windowSoftInputMode="adjustResize"
             android:exported="false" />
         <activity
             android:name=".activity.ProductListActivity"
