--- a/androidApp/app/src/main/AndroidManifest.xml
+++ b/androidApp/app/src/main/AndroidManifest.xml
@@ -43,6 +43,16 @@
         android:theme="@style/SeeStore"
         tools:targetApi="31">
         <activity
+            android:name=".activity.AuthActivity"
+            android:exported="false" />
+        <!-- Facebook Login Auth -->
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+        <meta-data
+            android:name="com.facebook.sdk.ClientToken"
+            android:value="@string/facebook_client_token" />
+        <activity
             android:name=".activity.OrderActivity"
             android:windowSoftInputMode="adjustResize"
             android:exported="false" />
