--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@drawable/logo_brand"
         android:supportsRtl="true"
-        android:theme="@style/Jodern"
+        android:theme="@style/seeStore"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
