--- a/androidApp/app/src/main/AndroidManifest.xml
+++ b/androidApp/app/src/main/AndroidManifest.xml
@@ -71,7 +71,10 @@
             android:exported="false"/>
         <activity
             android:name=".activity.MainActivity"
-            android:exported="true">
+            android:exported="false"/>
+            <activity
+                android:name=".activity.SplashActivity"
+                android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
