--- a/.gitignore
+++ b/.gitignore
@@ -225,9 +225,11 @@ GitHub.sublime-settings
 
 server/static/**
 
-android/
+
 readme-resources/
 README.md
+New folder/
+android/
 
 
 server/config/config.json
