--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
     implementation 'com.firebaseui:firebase-ui-storage:8.0.2'
     annotationProcessor 'androidx.annotation:annotation:1.1.0'
+    implementation 'me.relex:circleindicator:2.1.6'
 }
 
 apply plugin: 'com.google.gms.google-services'
