--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-storage:8.0.2'
     annotationProcessor 'androidx.annotation:annotation:1.1.0'
     implementation 'me.relex:circleindicator:2.1.6'
+
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
