move user infor and add back fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name=".activity.MapActivity"
             android:exported="false" />
         <activity
+            android:name=".activity.UserActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".activity.SplashScreenActivity"
             android:exported="true"
             android:theme="@style/SplashscreenTheme">
