--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,9 @@
         <activity
             android:name=".activity.UserActivity"
             android:exported="false" />
-
+        <activity
+            android:name=".activity.CartActivity"
+            android:exported="false" />
         <activity
             android:name=".activity.SplashScreenActivity"
             android:exported="true"
