--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
         <activity
             android:name=".activity.UserActivity"
             android:exported="false" />
+        <activity
+            android:name=".activity.CartActivity"
+            android:exported="false" />
 
         <activity
             android:name=".activity.SplashScreenActivity"
