--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
             android:name=".activity.PaymentActivity"
             android:exported="false" />
         <activity
+            android:name=".activity.HistoryOrderActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.SplashScreenActivity"
             android:exported="true"
             android:theme="@style/SplashscreenTheme">
