--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
             android:name=".activity.CartActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.PaymentActivity"
+            android:name="com.example.mobile_scratch.activity.PaymentActivity2"
             android:exported="false" />
         <activity
             android:name=".activity.SplashScreenActivity"
@@ -63,3 +63,6 @@
     </application>
 
 </manifest>
+
+
+
